[gd_scene load_steps=6 format=2]

[ext_resource path="res://objektid/Question.gd" type="Script" id=1]
[ext_resource path="res://assets/Background/k√ºsimuste_popup_puhas.png" type="Texture" id=2]
[ext_resource path="res://assets/Background/taust_FINAL (1).png" type="Texture" id=3]

[sub_resource type="ImageTexture" id=1]
lossy_quality = 0.0

[sub_resource type="ButtonGroup" id=2]

[node name="Question" type="Node2D"]
modulate = Color( 0.0470588, 0.768627, 0.933333, 1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 965.331, 545.63 )
scale = Vector2( 1.01144, 0.997203 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 978.931, 536.136 )
scale = Vector2( 0.337866, 0.357186 )
texture = ExtResource( 2 )
normal_map = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Question" type="Label" parent="."]
modulate = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
margin_left = 596.721
margin_top = 274.628
margin_right = 1349.72
margin_bottom = 393.628
size_flags_horizontal = 4
text = "

"
align = 1
valign = 1
autowrap = true

[node name="Vastusevariant1" type="Label" parent="."]
modulate = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
margin_left = 669.581
margin_top = 413.151
margin_right = 1290.58
margin_bottom = 455.151
size_flags_horizontal = 4
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 0
text = "Vastus number 1

"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Vastusevariant2" type="Label" parent="."]
modulate = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
margin_left = 667.105
margin_top = 531.686
margin_right = 1347.1
margin_bottom = 587.686
size_flags_horizontal = 4
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 0
text = "Vastus number 2


"
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Vastusevariant3" type="Label" parent="."]
modulate = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
margin_left = 666.791
margin_top = 634.826
margin_right = 1290.79
margin_bottom = 676.826
size_flags_horizontal = 4
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 0
text = "Vastus number 3

"
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Vastus1" type="CheckBox" parent="."]
margin_left = 602.558
margin_top = 364.639
margin_right = 659.558
margin_bottom = 475.639
group = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Vastus2" type="CheckBox" parent="."]
margin_left = 604.977
margin_top = 483.058
margin_right = 630.977
margin_bottom = 594.058
group = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Vastus3" type="CheckBox" parent="."]
margin_left = 599.663
margin_top = 596.0
margin_right = 625.663
margin_bottom = 699.0
group = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VASTA" type="Button" parent="."]
margin_left = 902.791
margin_top = 740.267
margin_right = 1043.79
margin_bottom = 789.267
text = "VASTA"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Vastus1" to="." method="_on_Vastus1_pressed"]
[connection signal="pressed" from="Vastus2" to="." method="_on_Vastus2_pressed"]
[connection signal="pressed" from="Vastus3" to="." method="_on_Vastus3_pressed"]
[connection signal="pressed" from="VASTA" to="." method="_on_VASTA_pressed"]
